--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,6 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+
     steps:
       # Step 1: 소스 코드 체크아웃
       - name: Checkout Repository
@@ -57,7 +58,6 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build --info
 
-      # Step 7: Docker 빌드 컨텍스트 생성
       - name: Create build context
         run: |
           mkdir -p docker-build
@@ -107,7 +107,7 @@ jobs:
             mkdir -p certbot/www
             mkdir -p ssl
             
-            # docker-compose.yml 파일 생성
+            # Create docker-compose.yml
             cat << EOF > docker-compose.yml
             version: '3'
             
@@ -144,6 +144,9 @@ jobs:
                   - "8080"
                 environment:
                   - JAVA_OPTS=-XX:+UseG1GC -Xms256m -Xmx512m
+                  - SPRING_PROFILES_ACTIVE=prod
+                  - SPRING_DATA_REDIS_HOST=redis
+                  - SPRING_DATA_REDIS_PASSWORD=\${REDIS_PASSWORD}
                 healthcheck:
                   test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
                   interval: 30s
@@ -176,89 +179,106 @@ jobs:
             # nginx.conf 생성 (HTTPS 설정 포함)
             cat << EOF > nginx.conf
             events {
-              worker_connections 1024;
+                worker_connections 1024;
+                multi_accept on;
+                use epoll;
             }
-            
+
             http {
-              upstream spring-app {
-                server spring-boot:8080;
-              }
-            
-              server {
-                listen 80;
-                listen [::]:80;
-                server_name api.togerun.shop;
-            
-                location /.well-known/acme-challenge/ {
-                    root /var/www/certbot;
+                upstream spring-app {
+                    server spring-boot:8080;
+                    keepalive 32;
                 }
-            
-                location / {
-                  return 301 https://\$host\$request_uri;
-                }
-              }
 
-              server {
-                listen 443 ssl;
-                http2 on;
-                listen [::]:443 ssl http2;
-                server_name api.togerun.shop;
-            
-                ssl_certificate /etc/letsencrypt/live/api.togerun.shop/fullchain.pem;
-                ssl_certificate_key /etc/letsencrypt/live/api.togerun.shop/privkey.pem;
-            
-                ssl_protocols TLSv1.2 TLSv1.3;
-                ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
-                ssl_prefer_server_ciphers off;
-                ssl_session_cache shared:SSL:10m;
-                ssl_session_timeout 10m;
-            
-                location / {
-                  # 기본 보안 헤더 
-                  add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-                  add_header X-Frame-Options "SAMEORIGIN";
-                  add_header X-Content-Type-Options "nosniff";
-                  add_header X-XSS-Protection "1; mode=block";
-              
-                  # CORS 헤더
-                  add_header 'Access-Control-Allow-Origin' 'https://www.togerun.shop' always;
-                  add_header 'Access-Control-Allow-Credentials' 'true' always;
-                  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-                  add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID' always;  
-              
+                # CORS 설정을 위한 맵
+                map \$http_origin \$cors_origin {
+                    default "";
+                    "https://www.togerun.shop" "\$http_origin";
+                    "https://togerun.shop" "\$http_origin";
+                    "http://localhost:3000" "\$http_origin";
+                }
+
+                server {
+                    listen 80;
+                    listen [::]:80;
+                    server_name api.togerun.shop;
+
+                    location /.well-known/acme-challenge/ {
+                        root /var/www/certbot;
+                    }
+
+                    location / {
+                        return 301 https://\$host\$request_uri;
+                    }
+                }
+
+                server {
+                    listen 443 ssl http2;
+                    listen [::]:443 ssl http2;
+                    server_name api.togerun.shop;
+
+                    # SSL 설정
+                    ssl_certificate /etc/letsencrypt/live/api.togerun.shop/fullchain.pem;
+                    ssl_certificate_key /etc/letsencrypt/live/api.togerun.shop/privkey.pem;
+                    ssl_protocols TLSv1.2 TLSv1.3;
+                    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
+                    ssl_prefer_server_ciphers off;
+                    ssl_session_cache shared:SSL:10m;
+                    ssl_session_timeout 10m;
+
+                    # CORS 프리플라이트 요청을 위한 OPTIONS 처리
                     if (\$request_method = 'OPTIONS') {
-                      add_header 'Access-Control-Allow-Origin' 'https://www.togerun.shop';  
-                      add_header 'Access-Control-Allow-Credentials' 'true';
-                      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-                      add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID';
-                      add_header 'Content-Type' 'text/plain charset=UTF-8';
-                      add_header 'Content-Length' 0;
-                      return 204;
-                  }
-            
-                  # SSE 관련 프록시 설정 
-                  proxy_set_header Connection '';
-                  proxy_http_version 1.1;
-                  proxy_buffering off;
-                  proxy_cache off;
-                  proxy_read_timeout 1d;
+                        add_header 'Access-Control-Allow-Origin' \$cors_origin;
+                        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                        add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID';
+                        add_header 'Access-Control-Allow-Credentials' 'true';
+                        add_header 'Access-Control-Max-Age' 3600;
+                        add_header 'Content-Type' 'text/plain charset=UTF-8';
+                        add_header 'Content-Length' 0;
+                        return 204;
+                    }
 
-                  proxy_pass http://spring-app;
-                  proxy_set_header Host \$host;
-                  proxy_set_header X-Real-IP \$remote_addr;
-                  proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                  proxy_set_header X-Forwarded-Proto \$scheme;
+                    location / {
+                        # 보안 헤더
+                        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+                        add_header X-Frame-Options "SAMEORIGIN" always;
+                        add_header X-Content-Type-Options "nosniff" always;
+                        add_header X-XSS-Protection "1; mode=block" always;
             
-                  proxy_set_header Upgrade \$http_upgrade;
-                  proxy_set_header Connecion "upgrade";
+                        # CORS 헤더
+                        add_header 'Access-Control-Allow-Origin' \$cors_origin always;
+                        add_header 'Access-Control-Allow-Credentials' 'true' always;
+                        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+                        add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID' always;
+
+                        # 프록시 설정
+                        proxy_pass http://spring-app;
+                        proxy_http_version 1.1;
             
-                  proxy_connect_timeout 300;
-                  proxy_send_timeout 300;
-                  proxy_read_timeout 300;
-                  send_timeout 300;
-                  proxy_cookie_path / "/; secure;  Domain=.togerun.shop";
+                        # 헤더 설정
+                        proxy_set_header Host \$host;
+                        proxy_set_header X-Real-IP \$remote_addr;
+                        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                        proxy_set_header X-Forwarded-Proto \$scheme;
+            
+                        # WebSocket 지원
+                        proxy_set_header Upgrade \$http_upgrade;
+                        proxy_set_header Connection "upgrade";
+
+                        # 타임아웃 설정
+                        proxy_connect_timeout 300;
+                        proxy_send_timeout 300;
+                        proxy_read_timeout 300;
+                        send_timeout 300;
+
+                        # SSE 설정
+                        proxy_buffering off;
+                        proxy_cache off;
+            
+                        # 쿠키 설정
+                        proxy_cookie_path / "/; secure; Domain=.togerun.shop";
+                    }
                 }
-              }
             }
             EOF
             
