--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -103,18 +103,40 @@ jobs:
           chmod +x deploy/scripts/*.sh
           
           # 환경 변수 설정 스크립트 생성
-          cat << 'EOF' > deploy/scripts/set_environment.sh
+          cat << EOF > deploy/scripts/set_environment.sh
+          #!/bin/bash
+          
+          # 앱 디렉토리 확인
+          APP_DIR="/home/ubuntu/app"
+          if [ ! -d "\$APP_DIR" ]; then
+              echo "Error: Application directory not found"
+              exit 1
+          fi
           
           # 환경 변수 파일 생성
-          cat > /home/ubuntu/app/.env << ENVFILE
-          DOCKER_USERNAME=${DOCKER_USERNAME}
-          REDIS_PASSWORD=${REDIS_PASSWORD}
+          ENV_FILE="\$APP_DIR/.env"
+          
+          # 환경 변수 파일 생성
+          cat > "\$ENV_FILE" << ENVFILE
+          DOCKER_USERNAME=\$DOCKER_USERNAME
+          REDIS_PASSWORD=\$REDIS_PASSWORD
           ENVFILE
           
-          # 환경 변수 파일 권한 설정
-          chmod 600 /home/ubuntu/app/.env
+          # 파일 권한 설정
+          chmod 600 "\$ENV_FILE"
+          chown ubuntu:ubuntu "\$ENV_FILE"
+          
+          # 환경 변수 파일 확인
+          if [ -f "\$ENV_FILE" ]; then
+              echo "Environment file created successfully at \$ENV_FILE"
+              echo "File permissions:"
+              ls -l "\$ENV_FILE"
+          else
+              echo "Error: Failed to create environment file"
+              exit 1
+          fi
           EOF
-  
+          
           chmod +x deploy/scripts/set_environment.sh
           
           # SSL 인증서 디렉토리 구조 생성
@@ -186,44 +208,44 @@ jobs:
                           return 204;
                       }
 
-                        # 보안 헤더
-                        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-                        add_header X-Frame-Options "SAMEORIGIN" always;
-                        add_header X-Content-Type-Options "nosniff" always;
-                        add_header X-XSS-Protection "1; mode=block" always;
-            
-                        # CORS 헤더
-                        add_header 'Access-Control-Allow-Origin' \$cors_origin always;
-                        add_header 'Access-Control-Allow-Credentials' 'true' always;
-                        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-                        add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID' always;
+                      # 보안 헤더
+                      add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+                      add_header X-Frame-Options "SAMEORIGIN" always;
+                      add_header X-Content-Type-Options "nosniff" always;
+                      add_header X-XSS-Protection "1; mode=block" always;
+          
+                      # CORS 헤더
+                      add_header 'Access-Control-Allow-Origin' $cors_origin always;
+                      add_header 'Access-Control-Allow-Credentials' 'true' always;
+                      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+                      add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID' always;
 
-                        # 프록시 설정
-                        proxy_pass http://spring-app;
-                        proxy_http_version 1.1;
-            
-                        # 헤더 설정
-                        proxy_set_header Host \$host;
-                        proxy_set_header X-Real-IP \$remote_addr;
-                        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                        proxy_set_header X-Forwarded-Proto \$scheme;
-            
-                        # WebSocket 지원
-                        proxy_set_header Upgrade \$http_upgrade;
-                        proxy_set_header Connection "upgrade";
+                      # 프록시 설정
+                      proxy_pass http://spring-app;
+                      proxy_http_version 1.1;
+          
+                      # 헤더 설정
+                      proxy_set_header Host $host;
+                      proxy_set_header X-Real-IP $remote_addr;
+                      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                      proxy_set_header X-Forwarded-Proto $scheme;
+          
+                      # WebSocket 지원
+                      proxy_set_header Upgrade $http_upgrade;
+                      proxy_set_header Connection "upgrade";
 
-                        # 타임아웃 설정
-                        proxy_connect_timeout 300;
-                        proxy_send_timeout 300;
-                        proxy_read_timeout 300;
-                        send_timeout 300;
+                      # 타임아웃 설정
+                      proxy_connect_timeout 300;
+                      proxy_send_timeout 300;
+                      proxy_read_timeout 300;
+                      send_timeout 300;
 
-                        # SSE 설정
+                      # SSE 설정
                       proxy_buffering off;
                       proxy_cache off;
-                        # 쿠키 설정
+          
+                      # 쿠키 설정
                       proxy_cookie_path / "/; secure; Domain=.togerun.shop";
-
                   }
               }
           }
@@ -253,10 +275,10 @@ jobs:
         run: |
           aws deploy create-deployment \
             --application-name ${{ secrets.CODE_DEPLOY_APP_NAME }} \
-           --deployment-group-name ${{ secrets.CODE_DEPLOY_GROUP_NAME }} \
-          --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=deploy.zip \
-          --deployment-config-name CodeDeployDefault.AllAtOnce \
-          --file-exists-behavior OVERWRITE
+            --deployment-group-name ${{ secrets.CODE_DEPLOY_GROUP_NAME }} \
+            --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=deploy.zip \
+            --deployment-config-name CodeDeployDefault.AllAtOnce \
+            --file-exists-behavior OVERWRITE
 
       # Step 14: 배포 시간 기록
       - name: Get Current Time
