--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -118,8 +118,8 @@ jobs:
           
           # 환경 변수 파일 생성
           cat > "\$ENV_FILE" << ENVFILE
-          DOCKER_USERNAME=\$DOCKER_USERNAME
-          REDIS_PASSWORD=\$REDIS_PASSWORD
+          DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
+          REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
           ENVFILE
           
           # 파일 권한 설정
@@ -278,8 +278,7 @@ jobs:
             --deployment-group-name ${{ secrets.CODE_DEPLOY_GROUP_NAME }} \
             --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=deploy.zip \
             --deployment-config-name CodeDeployDefault.AllAtOnce \
-            --file-exists-behavior OVERWRITE \
-            --environment-variables DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }},REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
+            --file-exists-behavior OVERWRITE
 
       # Step 14: 배포 시간 기록
       - name: Get Current Time
