--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -106,38 +106,20 @@ jobs:
           cat << EOF > deploy/scripts/set_environment.sh
           #!/bin/bash
           
-          # 앱 디렉토리 확인
+          # 앱 디렉토리 설정
           APP_DIR="/home/ubuntu/app"
-          if [ ! -d "\$APP_DIR" ]; then
-              echo "Error: Application directory not found"
-              exit 1
-          fi
+          
           
           # 환경 변수 파일 생성
-          ENV_FILE="\$APP_DIR/.env"
-          
-          # 환경 변수 파일 생성
-          cat > "\$ENV_FILE" << ENVFILE
+          cat > "\$APP_DIR/.env" << ENVEOF
           DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
           REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
-          ENVFILE
+          ENVEOF
           
           # 파일 권한 설정
-          chmod 600 "\$ENV_FILE"
-          chown ubuntu:ubuntu "\$ENV_FILE"
-          
-          # 환경 변수 파일 확인
-          if [ -f "\$ENV_FILE" ]; then
-              echo "Environment file created successfully at \$ENV_FILE"
-              echo "File permissions:"
-              ls -l "\$ENV_FILE"
-          else
-              echo "Error: Failed to create environment file"
-              exit 1
-          fi
+          chmod 600 "\$APP_DIR/.env"
+          chown ubuntu:ubuntu "\$APP_DIR/.env"
           EOF
-          
-          chmod +x deploy/scripts/set_environment.sh
           
           # SSL 인증서 디렉토리 구조 생성
           mkdir -p deploy/certbot/conf
