--- a/nginx.conf
+++ b/nginx.conf
@@ -8,9 +8,16 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # 블루/그린 업스트림 설정
     upstream spring-app {
-        server spring-boot-blue:8080;
+        server spring-boot-blue:8080 max_fails=3 fail_timeout=30s;
+        server spring-boot-green:8080 backup max_fails=3 fail_timeout=30s;
         keepalive 32;
+        
+        # 헬스체크 간격 설정
+        check interval=3000 rise=2 fall=5 timeout=1000 type=http;
+        check_http_send "HEAD / HTTP/1.0\r\n\r\n";
+        check_http_expect_alive http_2xx http_3xx;
     }
 
     map $http_origin $cors_origin {
@@ -19,6 +26,30 @@ http {
         "https://togerun.shop" "$http_origin";
         "http://localhost:3000" "$http_origin";
     }
+
+    # Access Log Format
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;
+
+    # 기본 설정
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    client_max_body_size 100M;
+
+    # GZIP 압축 설정
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
 
     server {
         listen 80;
@@ -42,11 +73,27 @@ http {
 
         ssl_certificate /etc/letsencrypt/live/api.togerun.shop/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/api.togerun.shop/privkey.pem;
+        
+        # SSL 최적화
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_session_tickets off;
+        
+        # 최신 SSL 설정
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
         ssl_prefer_server_ciphers off;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
+        
+        # OCSP Stapling
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        resolver 8.8.8.8 8.8.4.4 valid=300s;
+        resolver_timeout 5s;
+
+        # 버퍼 설정
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
 
         location / {
             if ($request_method = 'OPTIONS') {
@@ -98,6 +145,18 @@ http {
 
             # 쿠키 설정
             proxy_cookie_path / "/; secure; Domain=.togerun.shop";
+        }
+
+        # 헬스체크 엔드포인트
+        location /health {
+            access_log off;
+            return 200 'healthy\n';
+        }
+
+        # 에러 페이지 설정
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
         }
     }
 }
