--- a/docker-compose.blue.yml
+++ b/docker-compose.blue.yml
@@ -7,7 +7,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ${APP_DIR}/nginx/nginx.green.conf:/etc/nginx/nginx.conf:ro
+      - ${APP_DIR}/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ${APP_DIR}/ssl:/etc/nginx/ssl:ro
       - ${APP_DIR}/certbot/conf:/etc/letsencrypt:ro
       - ${APP_DIR}/certbot/www:/var/www/certbot:ro
