--- a/nginx.conf
+++ b/nginx.conf
@@ -119,7 +119,8 @@ http {
             add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID' always;
 
             # 프록시 설정
-            proxy_pass http://blue;
+            include /etc/nginx/conf.d/current.conf*;
+#             proxy_pass http://blue;
             proxy_http_version 1.1;
 
             # 헤더 설정
@@ -152,7 +153,7 @@ http {
             return 200 'healthy\n';
         }
 
-        include /etc/nginx/conf.d/current.conf;
+
 
         # 에러 페이지 설정
         error_page 500 502 503 504 /50x.html;
