--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -7,8 +7,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ${APP_DIR}/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ${APP_DIR}/nginx/conf.d:/etc/nginx/conf.d:ro
+      - ${APP_DIR}/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ${APP_DIR}/nginx/conf.d:/etc/nginx/conf.d
       - ${APP_DIR}/ssl:/etc/nginx/ssl:ro
       - ${APP_DIR}/certbot/conf:/etc/letsencrypt:ro
       - ${APP_DIR}/certbot/www:/var/www/certbot:ro
