--- a/docker-compose.blue.yml
+++ b/docker-compose.blue.yml
@@ -31,7 +31,7 @@ services:
       - JAVA_OPTS=-XX:+UseG1GC -Xms256m -Xmx512m
       - SPRING_PROFILES_ACTIVE=blue,prod
       - SERVER_PORT=8081
-      - SPRING_DATA_REDIS_HOST=redis
+      - SPRING_DATA_REDIS_HOST=redis-master
       - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8081/actuator/health"]
@@ -56,7 +56,7 @@ services:
     image: redis:alpine
     container_name: redis_boot
     command: redis-server --requirepass "${REDIS_PASSWORD}"
-    port:
+    ports:
         - "6379:6379"
     volumes:
       - redis-master:/data
