--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -31,7 +31,7 @@ services:
       - JAVA_OPTS=-XX:+UseG1GC -Xms256m -Xmx512m
       - SPRING_PROFILES_ACTIVE=green,prod
       - SERVER_PORT=8082
-      - SPRING_DATA_REDIS_HOST=redis
+      - SPRING_DATA_REDIS_HOST=redis-master
       - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8082/actuator/health"]
@@ -55,7 +55,7 @@ services:
     image: redis:alpine
     container_name: redis_boot
     command: redis-server --requirepass "${REDIS_PASSWORD}"
-    port:
+    ports:
       - "6379:6379"
     volumes:
       - redis-master:/data
