--- a/docker-compose.blue.yml
+++ b/docker-compose.blue.yml
@@ -54,7 +54,7 @@ services:
 
   redis-master:
     image: redis:alpine
-    container_name: redis_boot
+    container_name: redis-master
     command: redis-server --requirepass "${REDIS_PASSWORD}"
     ports:
         - "6379:6379"
